The global variables from Merger has been moved to ./src/settings.conf file

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 .ignoring/
-#src/shell-script-library
-#src/shell-script-library-tester
+src/shell-script-library
+src/shell-script-library-tester
 src/testing.sh
