Deprecated tags for ./src/compiler.sh have been set

--- a/src/settings.conf
+++ b/src/settings.conf
@@ -1,3 +1,8 @@
+#EDITOR="gedit"
+#EDITOR="kate"
+#EDITOR="nano"
+EDITOR="vim"
+
 PATH_LIBRARY_STORAGE_FILE_SYSTEM="/usr/local/bin/shell-script-library"
 PATH_LIBRARY_STORAGE_FILE_USER="$HOME/.local/bin/shell-script-library"
 
