--- a/src/settings.conf
+++ b/src/settings.conf
@@ -11,15 +11,24 @@ SOFTWARE_LIBRARY_EMAIL="henrikbeck95@gmail.com"
 SOFTWARE_LIBRARY_LICENSE="BSD 3-Clause License"
 SOFTWARE_LIBRARY_NAME="Shell Script Library"
 SOFTWARE_LIBRARY_VERSION="0.0.5"
+SOFTWARE_SHEBANG_LIBRARY="#!\/usr\/bin\/env sh"
+#SOFTWARE_SHEBANG_LIBRARY="#!\/usr\/bin\/env bash"
+#SOFTWARE_SHEBANG_LIBRARY="#!\/usr\/bin\/env fish"
 
 SOFTWARE_MERGER_AUTHOR="Henrik Beck"
 SOFTWARE_MERGER_EMAIL="henrikbeck95@gmail.com"
 SOFTWARE_MERGER_LICENSE="GPL3"
 SOFTWARE_MERGER_NAME="Shell Script Library Merger"
 SOFTWARE_MERGER_VERSION="0.0.1"
+SOFTWARE_SHEBANG_MERGER="#!\/usr\/bin\/env sh"
+#SOFTWARE_SHEBANG_MERGER="#!\/usr\/bin\/env bash"
+#SOFTWARE_SHEBANG_MERGER="#!\/usr\/bin\/env fish"
 
 SOFTWARE_TESTER_AUTHOR="Henrik Beck"
 SOFTWARE_TESTER_EMAIL="henrikbeck95@gmail.com"
 SOFTWARE_TESTER_NAME="Shell Script Libraty Unit Tester"
 SOFTWARE_TESTER_LICENSE="GPL3"
 SOFTWARE_TESTER_VERSION="0.0.1"
+SOFTWARE_SHEBANG_TESTER="#!\/usr\/bin\/env sh"
+#SOFTWARE_SHEBANG_TESTER="#!\/usr\/bin\/env bash"
+#SOFTWARE_SHEBANG_TESTER="#!\/usr\/bin\/env fish"
