compiler.sh file has been totally deprecated in favor of merger.sh file

--- a/src/settings.conf
+++ b/src/settings.conf
@@ -1,7 +1,19 @@
+##############################
+#Description
+##############################
+#
+#This is the global variables declarations from the merger.sh script file.
+#
+##############################
+
 #EDITOR="gedit"
 #EDITOR="kate"
 #EDITOR="nano"
 EDITOR="vim"
+
+REPOSITORY_CLONE_URL="https://github.com/henrikbeck95/shell_script_library.git"
+REPOSITORY_CLONE_PATH="$HOME/.shell_script_library"
+#REPOSITORY_CLONE_PATH="/tmp/.shell_script_library"
 
 PATH_LIBRARY_STORAGE_FILE_SYSTEM="/usr/local/bin/shell-script-library"
 PATH_LIBRARY_STORAGE_FILE_USER="$HOME/.local/bin/shell-script-library"
